# school

./: README.md
c++/kt1/: kt1.cpp
c++/kt2/: peli.cpp  peli.h
c++/kt3/: kt3.cpp
c++/kt4/: main.cpp
c++/kt5/: main.cpp
c++/kt6/: CMakeLists.txt  README.md
c++/kt6.2/: CMakeLists.txt  README.md
c++/kt6.2/src/: main.cpp  mainwin.h
c++/kt6/src/: main.cpp  mainwin.h
